--- a/TapThat/res/layout/activity_splashscreen.xml
+++ b/TapThat/res/layout/activity_splashscreen.xml
@@ -10,7 +10,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:contentDescription="@string/splash_screen_description"
-        android:scaleType="center"
+        android:scaleType="centerCrop"
         android:src="@raw/wallpaper" />
 
     <ProgressBar
