--- a/TapThat/res/layout/activity_splashscreen.xml
+++ b/TapThat/res/layout/activity_splashscreen.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent" >
 
     <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/space"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_alignParentTop="true"
@@ -23,7 +23,7 @@
         android:indeterminate="true" />
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/tapout_highscore1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/progressBar1"
