--- a/TapThat/res/layout/activity_splashscreen.xml
+++ b/TapThat/res/layout/activity_splashscreen.xml
@@ -23,7 +23,7 @@
         android:indeterminate="true" />
 
     <TextView
-        android:id="@+id/tapout_highscore1"
+        android:id="@+id/end_game_highscore1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/progressBar1"
